fix text alignment in styles
fixed a typo in styles sheet

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -3,6 +3,6 @@ div
     color:white;
     background-color: red;
     font-size:32px;
-    text-align:centre;
+    text-align:center;
     font-weight:bold;
 }
